# musicleague-analytics

./: .gitignore  README.md  pyproject.toml
src/: analyze.py  csv_model.py  flat_model.py  load_csv.py  models.py  spotify.py
