[tool.poetry]
name = "musicleague-analytics"
version = "0.1.0"
description = "Analytics tools for Music League"
authors = ["Matt Ball <matt.ball@heisencoder.net>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.0"
spotipy = "^2.25.1"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pylint = "*"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
